[package]
name = "tabluter"
version = "0.1.0"
edition = "2024"

[dependencies]
primitive-types = "0.12"
colored = "2"
termion = "2"
ahash = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[build]
rustflags = ["-C", "target_cpu=native"]
